--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
             <version>1.2.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jgrapht</groupId>
+            <artifactId>jgrapht-io</artifactId>
+            <version>1.5.2</version>
+        </dependency>
     </dependencies>
 
 </project>
